--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=http://localhost:5500
+REACT_APP_API_URL=https://www.naman-clubhouse.tk
+SOCKET_SERVER_URL=https://www.naman-clubhouse.tk
+NODE_ENV=production
